changed paragraph text

--- a/Folder_HTML/index.html
+++ b/Folder_HTML/index.html
@@ -23,7 +23,7 @@
 
 </header>
 <main>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum harum assumenda, consectetur deleniti voluptatibus, molestias minima totam nobis minus delectus fugiat saepe tempore facilis adipisci nesciunt sunt ipsa accusantium omnis!</p>
+  <p>Lorem Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum harum assumenda, consectetur deleniti voluptatibus, molestias minima totam nobis minus delectus fugiat saepe tempore facilis adipisci nesciunt sunt ipsa accusantium omnis!</p>
   <article>
     <h2>Testimonials</h2>
     <hr/>
